refactor: Split long method to satisfy linter